--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,8 @@
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='index.css'>
 	<link rel='manifest' href='manifest.json' crossorigin='use-credentials'>
-	<link rel='icon' type='image/png' href='favicon.png'>
+  <link rel='icon' type='image/png' href='favicon.png'>
+  <title>t-o-d ポートフォリオ</title>
 
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
